--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
     <title>Zodiac Controllers</title>
 </head>
 <body>
-    <h1>Zodica Controllers</h1>
+    <h1>Zodiac Controllers</h1>
     <%- body %>
 </body>
 </html>
