--- a/views/earth/index.ejs
+++ b/views/earth/index.ejs
@@ -1,17 +1,1 @@
-<h5><%= element  %></h5>
-
-<h6>Signs</h6>
-
-<ul>
-<% signs.forEach(sign => { %>
-  <li><%= sign %></li>
-<% }) %>
-</ul>
-
-<h6>Traits</h6>
-
-<ul>
-<% traits.forEach(trait => { %>
-  <li><%= trait %></li>
-<% }) %>
-</ul>
+<%- include('../common/element.ejs', { element, urlPrefix, signs, traits }) %>
