--- a/views/fire.ejs
+++ b/views/fire.ejs
@@ -1,13 +1,1 @@
-<h2>Fire Traits</h2>
-
-<ul>
-    <% fireSigns.forEach(sign=>{ %>
-        <li> <%=sign%> </li>
-    <% }) %>
-</ul>
-
-<ul>
-    <% fireTraits.forEach(trait=>{ %>
-        <li> <%=trait%> </li>
-    <% }) %>
-</ul>
+<%- include('common/element.ejs'),{ element, signs, traits}%>
